--- a/assets/src/scss/template-parts/aside.scss
+++ b/assets/src/scss/template-parts/aside.scss
@@ -4,7 +4,7 @@
   top: 0;
   bottom: 0;
   background: #002858;
-  box-shadow: 0 0 11px 13px #002858cf;
+  box-shadow: 0 0 11px 13px rgba(0, 16, 35, 0.8117647058823529);
   color: #fff;
   padding: 20px 50px;
   z-index: 3;
